@@ -1,3 +1,9 @@
+Tue Sep 20 21:18:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
+
+        * tests/IPV6/run_test.pl:
+
+          Added a test.
+
 Tue Sep 20 15:13:12 UTC 2005  Martin Corino  <mcorino@remedy.nl>
 
         * tests/CallbackTest/CallbackTest.mpc:
